se unifican estilos con sass y se arreglan bugs

--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
                     <h3 class="titulo-contacto"> Enlaces de interes </h3>
                     
                     <div class="text-contacto">
-                        <p> <a href="https://queportatilcomprar.net/mejor-procesador/">Procesadores recomendados</a> </p>
-                        <p> <a href="https://mejoresproductos.net/mejores-antenas-wifi/">Mejor conectividad</a> </p>
-                        <p> <a href="https://es.digitaltrends.com/computadoras/mejores-monitores-para-gaming/">Pantallas recomendadas</a> </p>
+                        <p> <a target="_blank" href="https://queportatilcomprar.net/mejor-procesador/">Procesadores recomendados</a> </p>
+                        <p> <a target="_blank" href="https://mejoresproductos.net/mejores-antenas-wifi/">Mejor conectividad</a> </p>
+                        <p> <a target="_blank" href="https://es.digitaltrends.com/computadoras/mejores-monitores-para-gaming/">Pantallas recomendadas</a> </p>
                     </div>
                 </div>
                 
